css/styles.css
body{
	background-color: rgb(25, 41, 61);
	margin: 0px;
}

h1{
	color: white;
	margin: 0px;
	font-size: 60px;

}

h2{
	color: rgb(0, 204, 255);
	font-size: 40px;
	margin: 10px;
}

ul{
	padding-right: 15px;
	display:flex;
	justify-content: flex-end;
}

p{
	color: white;
	font-size: 28px;
}

a{
	text-decoration: none;
	color: white;
	font-size: 30px;
}

@media (max-width: 500px){
	ul{
		justify-content: center;
	}
	li a{
		font-size: 35px;	
	}
	h1{
		font-size: 40px;	
	}
	h2{
		font-size: 28px;
	}
	p{
		font-size: 20px;
	}
}

nav li{
	list-style: none;
	border-radius: 40px;
	padding-right: 10px;
	padding-left: 10px;
	padding-top: 10px;
	padding-bottom: 10px;
	background-color: rgb(25, 41, 61);
}

nav li:hover{ background-color: rgb(0, 204, 255); }

main{
	width: 90%;
	margin: 0 auto 0 auto;
	height: auto;
}

main section{
	text-align: center;
}

#picture{
	max-width: 300px;
	width: 70%;
	border-radius: 50%;
	border: 5px solid;
	margin: auto;
}

#picture:hover{
	border-color: rgb(0, 204, 255);
}

#links{
	margin-top: 30px;
	display: flex;
	justify-content: center;
}

#links img{
	height:40px;
	width: 40px;
}

#links .github_logo, #projects-container .project .github_logo{
	width: 65px;
}

#main-info{
	padding-top: 2%;
	height: 90vh;
}

#stack, #other_skills{
	display: flex;
	flex-wrap: wrap;
	height: auto;
	justify-content: center;
}

#stack div, #other_skills div{
	background-color: white;
	height:auto;
	width: 25%;
	padding-top: 0.5%;
	border-radius: 15%;
	max-width: 100px;
	max-height: 100px;
	margin: 5px;
}

#stack div img, #other_skills div img{
	width: 50%;
	height: 60%;
	max-width:55px;
	max-height: 70px;
}

#stack div #python{
	padding-top: 5%;
	width: 50%;
	height: 50%;
}

#stack div #docker{
	height: 65%;
}

#stack div #sqlite{
	width: 50%;
	height: 65%;
}

#stack p, #other_skills p, #projects-container p{
	color: black;
	margin: 0px;
	font-size: 83%;
	text-align: center;
}

#projects-container{
	width: 90%;
	max-width: 550px;
	margin: auto;
}

#projects-container .project{
	background-color: white;
	height:auto;
	width: 100%;
	min-height: 200px;
	margin: auto;
	border: 4px solid;
	border-color: black;
	border-radius: 10px; 
}

#projects-container .project:hover{
	border: 6px solid;
	border-color: rgb(0, 204, 255);
}

.project div{
	text-align: center;
}

#projects-container .project .project-description{
	width: 95%;
	margin: auto;
}

#projects-container .project .project-description p{
	font-size: 130%;
	text-align: left;
}

#projects-container .project .project-header p{
	font-size: 170%;
	padding-left: 2%;
}

#projects-container .project .project-header{
	display: flex;
	align-items: center;
	justify-content: center;
}

#projects-container .project .project-stack{
	display: flex;
	justify-content: center;
	margin-bottom: 3%;
}

#projects-container .project .project-stack div{
	display:flex;
	align-items: center;
	padding: 5px;
	background-color: rgb(54, 209, 200);
	border: 1px solid rgb(25, 41, 61);
	border-radius: 5%;
}

#projects-container .project .project-stack div p{
	font-size: 20px;	
}

#projects-container .project img{
	width: 30%;
	height: 80%;
	max-width: 100px;
	min-width: 50px;
}

